chapter_troubleshoot/manifests_fixed/06-cnd-web.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mysql
  namespace: troubleshoot
  labels:
    app: mysql
spec:
  containers:
  - name: mysql
    image: mysql:5.7
    ports:
    - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: troubleshoot
spec:
  selector:
    app: mysql
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: v1
kind: Pod
metadata:
  name: cnd-web-app
  namespace: troubleshoot
  labels:
    app: cnd-web
spec:
  containers:
  - name: cnd-web-app
    image: nginx:1.27
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cnd-web-svc
  namespace: troubleshoot
spec:
  selector:
    app: cnd-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: dummy-app
  namespace: troubleshoot
  labels:
    app: dummy-app
spec:
  containers:
  - name: dummy-app
    image: busybox:1.36
    command: ["sh", "-c", "echo 'Dummy app running' && sleep 3600"]
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cnd-web-httproute
  namespace: troubleshoot
spec:
  parentRefs:
  - name: handson-gateway
    namespace: gateway
    sectionName: http
  hostnames:
  - cnd-web.example.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: cnd-web-svc
      port: 80
